--- a/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
@@ -154,7 +154,7 @@
         position: relative;
         text-transform: uppercase;
         cursor: pointer;
-        font-size: $font-size-xs;
+        font-size: 12px;
         padding: 10px 8px;
         line-height: $line-height-lg;
       }
@@ -341,7 +341,7 @@
     @include linear-gradient($info-states, $info);
   }
   &[data="green"] {
-    @include linear-gradient($light-green, $light-green);
+    @include linear-gradient(#324479, #324479);
   }
 
   .user {
