--- a/src/views/Brands/BrandsStyle.scss
+++ b/src/views/Brands/BrandsStyle.scss
@@ -2,6 +2,22 @@
   .tablesorter td {
     cursor: pointer !important;
   }
+
+  .logoContainer {
+    width: 170px;
+    height: 170px;
+    margin: auto;
+    margin-bottom: 70px !important;
+    text-align: center;
+
+    img {
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #324479;
+      padding: 15px;
+    }
+  }
   i {
     cursor: pointer;
     font-size: 17px;
