--- a/src/views/Admins/AdminsStyle.scss
+++ b/src/views/Admins/AdminsStyle.scss
@@ -1,11 +1,22 @@
-.Branches {
+.Admins {
   .tablesorter td {
     cursor: pointer !important;
   }
 
-  .dropDownContainer {
-    width: 24%;
+  .logoContainer {
+    width: 170px;
+    height: 170px;
     margin: auto;
+    margin-bottom: 70px !important;
+    text-align: center;
+
+    img {
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #324479;
+      padding: 15px;
+    }
   }
   i {
     cursor: pointer;
