--- a/src/components/Errors/Errors.scss
+++ b/src/components/Errors/Errors.scss
@@ -5,8 +5,8 @@
   width: 40%;
   z-index: 100;
   color: #721c24;
-  background-color: #f5c6cb;
-  border-color: #f5c6cb;
+  background-color: #ff7272;
+  border-color: #ff7272;
   height: 45px;
   left: 30%;
   border-radius: 20px;
